Mon Dec  7 11:12:49 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
          Instance state should be alive in all cases.

Mon Dec  7 10:54:16 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
          Implemented max_delivered_data.

Mon Dec  7 10:30:38 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Reader/Base/Reader_Starter.idl:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver.idl:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.h:
        * connectors/dds4ccm/tests/Reader/Receiver/Reader_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Reader/Sender/Reader_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/Reader/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/Reader/descriptors/run_test.pl:
          Rewritten test due to timing issues. Also added a 'no data' test.

Mon Dec  7 10:07:57 UTC 2009  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst:
        * connectors/dds4ccm/tests/PSLDeadline:
        * connectors/dds4ccm/tests/PSLDeadline/Base:
        * connectors/dds4ccm/tests/PSLDeadline/Base/PSL_DeadlineTest_Base.idl:
        * connectors/dds4ccm/tests/PSLDeadline/Base/PSL_DeadlineTest_Base.mpc:
        * connectors/dds4ccm/tests/PSLDeadline/Connector:
        * connectors/dds4ccm/tests/PSLDeadline/Connector/PSL_DeadlineTest_Connector.idl:
        * connectors/dds4ccm/tests/PSLDeadline/Connector/PSL_DeadlineTest_Connector.mpc:
        * connectors/dds4ccm/tests/PSLDeadline/Connector/PSL_DeadlineTest_Connector_exec.cpp:
        * connectors/dds4ccm/tests/PSLDeadline/Connector/PSL_DeadlineTest_Connector_exec.h:
        * connectors/dds4ccm/tests/PSLDeadline/descriptors:
        * connectors/dds4ccm/tests/PSLDeadline/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/PSLDeadline/descriptors/run_test.pl: